--- a/www/templates/applibrary/applibrary.html
+++ b/www/templates/applibrary/applibrary.html
@@ -13,7 +13,7 @@
                     <div class="item item-divider" ng-show="item.type == 'separator'">
                         <h2><b>{{item.title}}</b></h2>
                     </div>
-                    <div class="item item-thumbnail-left" ng-show="item.type != 'separator' && item.os==platform" ng-click="openPage(item.url)">
+                    <div class="item item-thumbnail-left" ng-show="item.type != 'separator' && item.os==platform" ng-click="openPage(item)">
                         <img ng-src="{{item.coverimageurl}}" alt="">
                         <div class="row">
                             <div class="col">
